--- a/package.json
+++ b/package.json
@@ -6,4 +6,10 @@
   "engines": {
     "node": ">=14.15.0"
   },
+  "dependencies": {
+    "@aws-sdk/client-ecs": "^3.137.0",
+    "@aws-sdk/client-s3": "^3.135.0",
+    "@aws-sdk/s3-request-presigner": "^3.135.0",
+    "aws-lambda": "^1.0.7"
+  },
 }
