--- a/package.json
+++ b/package.json
@@ -12,4 +12,7 @@
     "@aws-sdk/s3-request-presigner": "^3.135.0",
     "aws-lambda": "^1.0.7"
   },
+  "devDependencies": {
+    "typescript": "^4.1.3"
+  }
 }
