--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "aws-lambda": "^1.0.7"
   },
   "devDependencies": {
+    "eslint": "^8.20.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.3.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "typescript": "^4.1.3"
   }
 }
