--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aws-lambda": "^1.0.7"
   },
   "devDependencies": {
+    "@serverless/typescript": "^3.0.0",
     "eslint": "^8.20.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
