--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prettier": "^2.7.1",
     "serverless": "^3.0.0",
     "serverless-esbuild": "^1.23.3",
+    "ts-jest": "^28.0.7",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3"
