--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^14.14.25",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
+    "aws-event-mocks": "^0.0.0",
     "esbuild": "^0.14.11",
     "eslint": "^8.20.0",
     "eslint-config-airbnb-base": "^15.0.0",
